Added models, initial Senior Home activity, and completed the implementation for sign in.

--- a/WhipperSnapper/app/src/main/res/layout/activity_fill_out_profile.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_fill_out_profile.xml
@@ -111,4 +111,14 @@
         android:layout_alignParentBottom="true"
         android:onClick="onCreateProfileClick" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbCreatingProfile"
+        android:indeterminate="true"
+        android:layout_above="@+id/btnCreateProfile"
+        android:layout_alignRight="@+id/tvForPrivacyLabel"
+        android:layout_alignEnd="@+id/tvForPrivacyLabel" />
+
 </RelativeLayout>
