--- a/WhipperSnapper/app/src/main/res/layout/activity_find_task.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_find_task.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.al.whippersnapper.activities.FindTaskActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="Find Task Activity" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/TODODummy" />
 
 </RelativeLayout>
