Got the basics of Google maps copied and pasted and added the map view, but the map isn't showing up on my phone. No error messages though.

--- a/WhipperSnapper/app/src/main/res/layout/activity_create_task.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_create_task.xml
@@ -76,6 +76,13 @@
             android:id="@+id/tvTaskDoneAtLabel"
             android:layout_below="@+id/ivTaskPhoto" />
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@+id/tvTaskDoneAtLabel"
+            />
+
     </RelativeLayout>
     </ScrollView>
 
