--- a/WhipperSnapper/app/src/main/res/layout/activity_create_task.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_create_task.xml
@@ -2,12 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     tools:context="com.al.whippersnapper.activities.CreateTaskActivity">
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -76,14 +80,16 @@
             android:id="@+id/tvTaskDoneAtLabel"
             android:layout_below="@+id/ivTaskPhoto" />
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/map"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_below="@+id/tvTaskDoneAtLabel"
-            />
-
     </RelativeLayout>
     </ScrollView>
+
+    <fragment
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="#FF00FF"
+        android:layout_below="@+id/scrollView" />
+
 
 </RelativeLayout>
