--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.al.whippersnapper.fragments.CreateTaskLocationFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
 
-
-        <TextView
+       <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/I_need_the_task_done_at"
@@ -61,4 +56,3 @@
 
 
     </RelativeLayout>
-</FrameLayout>
