Able to set markers on the Create Task map.
Also started adding the "All Done" buttons.

--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
@@ -49,7 +49,7 @@
             android:id="@+id/map"
             class="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:background="#FF00FF"
             android:layout_below="@+id/radioGroup"
             />
