Added progress bars, also made the Cancel Task button work.

--- a/WhipperSnapper/app/src/main/res/layout/activity_waiting_for_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_waiting_for_chat.xml
@@ -28,5 +28,6 @@
         android:layout_height="wrap_content"
         android:text="@string/Cancel_this_task_request"
         android:id="@+id/btnCancelThisTask"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="onCancelTaskClick" />
 </LinearLayout>
