--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
@@ -77,5 +77,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbInDetailsFrag"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
