--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_location.xml
@@ -66,5 +66,15 @@
         android:layout_alignRight="@+id/map"
         android:layout_alignEnd="@+id/map" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbInLocationFrag"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
