--- a/WhipperSnapper/app/src/main/res/layout/item_task_summary.xml
+++ b/WhipperSnapper/app/src/main/res/layout/item_task_summary.xml
@@ -1,17 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    tools:context="com.al.whippersnapper.fragments.FindTaskMapViewFragment">
-
-    <fragment
-        android:id="@+id/mapFindTasks"
-        class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FF00FF"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/ivFeatureSeniorPhoto" />
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
 
     <ImageView
@@ -19,7 +8,7 @@
         android:layout_height="@dimen/profile_photo_in_find_tasks"
         android:id="@+id/ivFeatureSeniorPhoto"
         android:src="@mipmap/ic_launcher"
-        android:layout_above="@+id/tvFeatureDetails"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -30,17 +19,20 @@
         android:lines="3"
         android:maxLines="3"
         android:ellipsize="end"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/tvFeaturePostedOn"
-        android:layout_alignEnd="@+id/tvFeaturePostedOn" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/ivFeatureSeniorPhoto" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvFeatureSeniorName"
-        android:layout_alignTop="@+id/ivFeatureSeniorPhoto"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivFeatureSeniorPhoto"
-        android:layout_toEndOf="@+id/ivFeatureSeniorPhoto" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,10 +48,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvFeaturePostedOn"
-        android:layout_below="@+id/tvFeatureTaskType"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/tvFeatureSeniorName"
-        android:layout_toEndOf="@+id/tvFeatureSeniorName" />
+        android:layout_below="@+id/tvFeatureTaskType"
+        android:layout_toRightOf="@+id/ivFeatureSeniorPhoto"
+        android:layout_toEndOf="@+id/ivFeatureSeniorPhoto" />
 
 </RelativeLayout>
