--- a/WhipperSnapper/app/src/main/res/layout/fragment_find_task_map_view.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_find_task_map_view.xml
@@ -31,8 +31,10 @@
         android:maxLines="3"
         android:ellipsize="end"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/tvFeaturePostedOn"
-        android:layout_alignEnd="@+id/tvFeaturePostedOn" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +42,9 @@
         android:id="@+id/tvFeatureSeniorName"
         android:layout_alignTop="@+id/ivFeatureSeniorPhoto"
         android:layout_toRightOf="@+id/ivFeatureSeniorPhoto"
-        android:layout_toEndOf="@+id/ivFeatureSeniorPhoto" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:hint="@string/To_view_details" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,7 +63,7 @@
         android:layout_below="@+id/tvFeatureTaskType"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/tvFeatureSeniorName"
-        android:layout_toEndOf="@+id/tvFeatureSeniorName" />
+        android:layout_toEndOf="@+id/ivFeatureSeniorPhoto"
+        android:layout_toRightOf="@+id/ivFeatureSeniorPhoto" />
 
 </RelativeLayout>
