--- a/WhipperSnapper/app/src/main/res/layout/fragment_find_task_list_view.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_find_task_list_view.xml
@@ -5,4 +5,11 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvTaskList"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
