--- a/WhipperSnapper/app/src/main/res/layout/infowindow_task.xml
+++ b/WhipperSnapper/app/src/main/res/layout/infowindow_task.xml
@@ -22,5 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvInfoTaskDetails"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:ellipsize="end"
+        android:maxLines="2" />
 </LinearLayout>
