--- a/WhipperSnapper/app/src/main/res/layout/item_task_summary.xml
+++ b/WhipperSnapper/app/src/main/res/layout/item_task_summary.xml
@@ -16,14 +16,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvFeatureDetails"
-        android:lines="3"
-        android:maxLines="3"
+        android:lines="2"
+        android:maxLines="2"
         android:ellipsize="end"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvFeaturePostedOn"
+        android:layout_toRightOf="@+id/ivFeatureSeniorPhoto"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/ivFeatureSeniorPhoto" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
