--- a/WhipperSnapper/app/src/main/res/layout/activity_fill_out_profile.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_fill_out_profile.xml
@@ -69,13 +69,13 @@
         android:layout_alignEnd="@+id/btnTakePhotoNow" />
 
     <ImageView
-        android:layout_width="@dimen/task_photo_size"
+        android:layout_width="@dimen/profile_photo_on_signup_size"
         android:layout_height="@dimen/profile_photo_on_signup_size"
         android:id="@+id/ivProfilePhoto"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_personal_photo" />
 
     <Button
         android:layout_width="wrap_content"
