--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
@@ -64,7 +64,7 @@
         android:id="@+id/ivTaskPhoto"
         android:layout_below="@+id/tvTakeTaskPhotoLabel"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_add_task_photo" />
 
     <Button
         android:layout_width="wrap_content"
