--- a/WhipperSnapper/app/src/main/res/values/dimens.xml
+++ b/WhipperSnapper/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="task_photo_size">80dp</dimen>
     <dimen name="profile_photo_in_find_tasks">80dp</dimen>
     <dimen name="AcceptDeclineButtonHeight">40dp</dimen>
+    <dimen name="no_internet_size">80dp</dimen>
 </resources>
