--- a/WhipperSnapper/app/src/main/res/layout/item_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/item_chat.xml
@@ -9,7 +9,8 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        android:layout_gravity="top" />
     <TextView
         android:textSize="18sp"
         android:id="@+id/tvChatText"
@@ -17,7 +18,7 @@
         android:lines="3"
         android:layout_marginRight="64dp"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:text="DUMMY: Chat text goes here.">
     </TextView>
     <ImageView
@@ -31,5 +32,6 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        android:layout_gravity="top" />
 </LinearLayout>
