DONE. Got the task address to display when the senior accepts the offer. Also added a default task photo if none was supplied.

--- a/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
@@ -38,6 +38,7 @@
         android:id="@+id/lvChat"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:transcriptMode="alwaysScroll"
         android:layout_above="@+id/etMessageToSend"
         android:layout_below="@+id/tvOtherUserName" />
 
