--- a/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
@@ -30,14 +30,17 @@
             android:id="@+id/btnAcceptOffer"
             android:layout_weight="1"
             android:onClick="onAcceptOfferClick" />
+
     </LinearLayout>
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:id="@+id/lvChat"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:transcriptMode="alwaysScroll"
         android:layout_above="@+id/etMessageToSend"
         android:layout_below="@+id/tvOtherUserName" />
@@ -73,4 +76,5 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/lvChat"
         android:layout_alignEnd="@+id/lvChat" />
+
 </RelativeLayout>
