--- a/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_chat.xml
@@ -31,6 +31,14 @@
             android:layout_weight="1"
             android:onClick="onAcceptOfferClick" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Call"
+            android:id="@+id/btnCall"
+            android:layout_weight="1"
+            android:onClick="onCallClick" />
+
     </LinearLayout>
 
     <ListView
