--- a/WhipperSnapper/app/src/main/res/layout/activity_user_type_picker.xml
+++ b/WhipperSnapper/app/src/main/res/layout/activity_user_type_picker.xml
@@ -15,19 +15,36 @@
         android:id="@+id/tvAppTitle"
         android:layout_gravity="center_horizontal" />
 
-    <Button
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/I_am_a_senior"
-        android:id="@+id/btnIAmASenior"
-        android:layout_gravity="center_horizontal"
-        android:onClick="onSeniorClick" />
+        android:layout_gravity="center_horizontal">
 
-    <Button
-        android:layout_width="fill_parent"
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/I_am_a_senior"
+            android:id="@+id/btnIAmASenior"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onSeniorClick" />
+
+        </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/I_am_a_volunteer"
-        android:id="@+id/btnIAmAVolunteer"
-        android:layout_gravity="center_horizontal"
-        android:onClick="onVolunteerClick" />
+        android:layout_gravity="center_horizontal">
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/I_am_a_volunteer"
+            android:id="@+id/btnIAmAVolunteer"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onVolunteerClick" />
+
+        </LinearLayout>
+
 </LinearLayout>
