--- a/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
+++ b/WhipperSnapper/app/src/main/res/layout/fragment_create_task_details.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.al.whippersnapper.fragments.CreateTaskDetailsFragment">
+    tools:context="com.al.whippersnapper.fragments.CreateTaskDetailsFragment"
+    android:background="@color/primary_color">
 
 
     <TextView
@@ -16,7 +17,8 @@
         android:id="@+id/tvTaskTypeLabel"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@color/text_icons" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -34,7 +36,8 @@
         android:id="@+id/tvDetailsLabel"
         android:layout_below="@+id/spTaskType"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@color/text_icons" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -47,7 +50,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/spTaskType"
         android:layout_alignEnd="@+id/spTaskType"
-        android:hint="@string/Task_details_hint" />
+        android:hint="@string/Task_details_hint"
+        android:background="@color/text_field_background" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,7 +60,8 @@
         android:id="@+id/tvTakeTaskPhotoLabel"
         android:layout_below="@+id/etTaskDetails"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@color/text_icons" />
 
     <ImageView
         android:layout_width="@dimen/task_photo_size"
@@ -75,7 +80,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@color/accent_color" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
