--- a/WhipperSnapper/app/src/main/res/values/dimens.xml
+++ b/WhipperSnapper/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="profile_photo_in_find_tasks">80dp</dimen>
     <dimen name="AcceptDeclineButtonHeight">40dp</dimen>
     <dimen name="no_internet_size">80dp</dimen>
+    <dimen name="title_avatar_size">25dp</dimen>
 </resources>
